Self/mydevorg/Unpackaged/Config/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Picklist__c</fullName>
        <label>Main Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Picklist__c</fullName>
        <label>Sub Picklist</label>
        <picklist>
            <controllingField>Main_Picklist__c</controllingField>
            <picklistValues>
                <fullName>Value 1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 1.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 5.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 5.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 5.4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Establishment</label>
        <referenceTo>Visibility__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
</CustomObject>